# RM1_SegCNN

./: README.md
nostril_seg/: .gitignore  adagrad.ipynb  convert.sh  graph.py  masking.py  net.ipynb  pyproject.toml
nostril_seg/result_csv/ASPOCRNET-Mobilenet/: l.csv  s_c_a.csv  v_l.csv  v_s_c_a.csv
nostril_seg/result_csv/ASPOCRNET-Resnet/: l.csv  s_c_a.csv  v_l.csv  v_s_c_a.csv
nostril_seg/result_csv/ASPOCRNET-Xception/: l.csv  s_c_a.csv  v_l.csv  v_s_c_a.csv
nostril_seg/result_csv/Unet-Mobilenet/: l.csv  s_c_a.csv  v_l.csv  v_s_c_a.csv
nostril_seg/result_csv/Unet-Resnet/: l.csv  s_c_a.csv  v_l.csv  v_s_c_a.csv
nostril_seg/result_csv/Unet-Seresnet/: l.csv  s_c_a.csv  v_l.csv  v_s_c_a.csv
